# TinyVecDB

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: BuildInfo.cmake  buildinfo.h.in  buildinfo.sh
proto/: Makefile  echo.proto  vdb.proto
protos/: CMakeLists.txt
src/: CMakeLists.txt  database.cc  database.h  field_bitmap.cc  field_bitmap.h  index.cc  index.h  index_factory.cc  index_factory.h  kv_storage.cc  kv_storage.h  main.cc  persistence.cc  persistence.h  util.h  vdb_server.cc  vdb_server.h  vdb_service.cc  vdb_service.h
test/: test.sh
vdb/: CMakeLists.txt  main.cc
vdb/bitmap/: CMakeLists.txt  field_bitmap.cc  field_bitmap.h
vdb/db/: CMakeLists.txt  database.cc  database.h
vdb/index/: CMakeLists.txt  index.cc  index.h  index_factory.cc  index_factory.h
vdb/persistence/: CMakeLists.txt  kv_storage.cc  kv_storage.h  persistence.cc  persistence.h
vdb/server/: CMakeLists.txt  server.cc  server.h  service.cc  service.h
vdb/util/: CMakeLists.txt  util.h
